# Story-Trans-And-Audio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION_SOURCES.md  NEXT_TASK.md  PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml  run_app.ps1
.ai/: DECISIONS.md  PROJECT.md  STATE.md
docs/: AI_ACTIVE_TASK_TEMPLATE.md  AI_TECH_LEAD_PROTOCOL.md  BATCH_PREPARE_CANONICAL_ACTIVATION_RUNBOOK_DESIGN.md  BATCH_PREPARE_IDEMPOTENCY_DESIGN.md  BATCH_PREPARE_JOB_ADAPTER_DESIGN.md  BATCH_PREPARE_JOB_TRANSACTION_INTEGRATION_DESIGN.md  BATCH_PREPARE_ORCHESTRATION_DESIGN.md  BATCH_PREPARE_PHASE10_ISOLATED_ADAPTER.md  BATCH_PREPARE_PHASE11_RUNTIME_ROLLOUT_DESIGN.md  BATCH_PREPARE_PHASE12_CLONE_REHEARSAL.md  BATCH_PREPARE_PHASE13_DISABLED_RUNTIME_AUTH.md  BATCH_PREPARE_PHASE14_CLONE_API_ACCEPTANCE.md  BATCH_PREPARE_PHASE9_TRANSACTION_INFRASTRUCTURE.md  COST_CONTROL.md  DAILY_PRODUCTION_WORKFLOW.md  DATA_MODEL.md  DECISIONS.md  PREPARE_ACTIVATION_RUNBOOK.md  RUNBOOK.md  TESTING.md
scripts/: backup.py  build_listening_checklist.py  capture_ai_handoff.ps1  cleanup_gemini_cache.py  doctor.py  export_youtube_handoff.py  import_character_bible.py  prepare_activation.py  restore.py  run_audio_qa.py  run_production_chapter.py  run_production_workflow.py  setup_task6_dedicated_fixtures.py  smoke_custom_voice.py  smoke_multivoice.py  speaker_assignment_draft.py
story_audio/: __init__.py  active_output.py  api.py  audio_qa.py  audio_repair_blocks.py  backup.py  batch_plan.py  batch_prepare_clone_api.py  batch_prepare_clone_rehearsal.py  batch_prepare_contract.py  db.py  (+50 more)
(+130 files in other folders)
