[project]
name = "story-audio"
version = "0.1.0"
description = "Recoverable EPUB to VieNeu-TTS audio pipeline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.18",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["story_audio*"]

[tool.setuptools.package-data]
"story_audio.migrations" = ["*.sql"]
